--- a/css/main.css
+++ b/css/main.css
@@ -12,32 +12,39 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-a {
-    text-decoration: none;
-    color: #999;
+ul {
+    font-size: 1.05em;
 }
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 ul.posts li {
     list-style: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+a {
+    text-decoration: none;
+    color: #995;
+}
+h1 {
+    font-size: 2.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+h2 {
+    font-size:1.6em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #990;
+    line-height: 0.1;
+}
+p {
+    font-size: 1.2em;
+    line-height: 1.2em;
+}
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
 }
